src/test/ui/consts/const-eval/issue-44578.nll.stderr
error[E0080]: referenced constant has errors
  --> $DIR/issue-44578.rs:35:14
   |
LL |     const AMT: usize = [A::AMT][(A::AMT > B::AMT) as usize];
   |                        ------------------------------------ index out of bounds: the len is 1 but the index is 1
...
LL |     println!("{}", <Bar<u16, u8> as Foo>::AMT);
   |              ^^^^

error[E0080]: erroneous constant used
  --> $DIR/issue-44578.rs:35:14
   |
LL |     println!("{}", <Bar<u16, u8> as Foo>::AMT);
   |              ^^^^  -------------------------- referenced constant has errors

error[E0080]: referenced constant has errors
  --> $DIR/issue-44578.rs:35:20
   |
LL |     const AMT: usize = [A::AMT][(A::AMT > B::AMT) as usize];
   |                        ------------------------------------ index out of bounds: the len is 1 but the index is 1
...
LL |     println!("{}", <Bar<u16, u8> as Foo>::AMT);
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0080]: erroneous constant used
  --> $DIR/issue-44578.rs:35:20
   |
LL |     println!("{}", <Bar<u16, u8> as Foo>::AMT);
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^ referenced constant has errors

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0080`.
